<resources>
    <string name="app_name">Weather</string>

    <string name="feels_like_placeholder">Feels like: -- °C</string>
    <string name="humidity_placeholder">Humidity: -- %</string>
    <string name="wind_placeholder">Wind speed: -- m/s</string>
    <string name="pressure_placeholder">Pressure: -- hPa</string>
    <string name="sunrise_placeholder">Sunrise: --</string>
    <string name="sunset_placeholder">Sunset: --</string>

    <string name="city_placeholder">City</string>
    <string name="temp_placeholder">-- °C</string>
    <string name="condition_placeholder">Weather condition</string>

    <string name="feels_like">Feels like: %1$.1f °C</string>
    <string name="humidity">Humidity: %1$d %%</string>
    <string name="wind">Wind speed: %1$.1f m/s</string>
    <string name="pressure">Pressure: %1$d hPa</string>

    <string name="sunrise">Sunrise: %1$s</string>
    <string name="sunset">Sunset: %1$s</string>

    <string name="weather_icon_desc">Weather icon</string>

    <string name="gps_off_title">Location is turned off</string>
    <string name="gps_off_message">Your GPS is turned off. Please turn on location services to get the current weather.</string>
    <string name="not_now">Not now</string>
    <string name="turn_on">Turn on</string>
</resources>